cfn.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  This CloudFormation template create ASG and ALB with ASG Target Tracking Policy.

Parameters:

  MyVPC:
    Description: You can choose your VPC
    Type: AWS::EC2::VPC::Id

  MySubnets:
    Description: Choose at least 2 subnet
    Type: List<AWS::EC2::Subnet::Id> 

  ProdOrTest:
    Description: You can choose production or test option
    Type: String
    Default: prod
    AllowedValues:
      - prod 
      - test

  MyKeyPairs:
    Description: You can choose your key pair
    Type: AWS::EC2::KeyPair::KeyName
    Default: firstkey

  MyInstanceType:
    Description: You can choose your instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.nano
      - t3.micro 
    
Mappings:

  RegionImageMap:
    us-east-1:
      prod: ami-03a6eaae9938c858c
      test: ami-098143f68772b34f5
    us-east-2:
      prod: ami-0d406e26e5ad4de53
      test: ami-0dbb0f9887f1fe98f
    us-west-1:
      prod: ami-0062dbf6b829f04e1
      test: ami-04669a22aad391419


Resources:

  MyScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref MyASG  # Required
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification: 
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 60.0

  MyASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: omercanASG
      DesiredCapacity: 1
      HealthCheckType: ELB
      LaunchTemplate:
        LaunchTemplateId: !GetAtt MyLaunchTemplate.LaunchTemplateId
        Version: !GetAtt MyLaunchTemplate.DefaultVersionNumber
      MaxSize: 3 # Required
      MinSize: 1 # Required
      TargetGroupARNs: 
        - !Ref MyTargetGroup
      VPCZoneIdentifier: !Ref MySubnets

  MyListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions: # Required
        - TargetGroupArn: !GetAtt MyTargetGroup.TargetGroupArn
          Type: forward
      LoadBalancerArn: !Ref MyLoadBalancer # Required
      Port: 80
      Protocol: HTTP

  MyLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: omercanELB
      SecurityGroups: 
        - !Ref MySecGrp
      Subnets: !Ref MySubnets 
      Type: application

  MyLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !FindInMap 
          - RegionImageMap
          - !Ref 'AWS::Region'
          - !Ref ProdOrTest
        InstanceType: !Ref MyInstanceType
        KeyName: !Ref MyKeyPairs
        SecurityGroupIds:
          - !Ref MySecGrp
        UserData: !Base64 |
          #!/bin/bash
          #update os
          yum update -y
          #install apache server
          yum install -y httpd
          # get private ip address of ec2 instance using instance metadata
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PRIVATE_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4`
          # get public ip address of ec2 instance using instance metadata
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PUBLIC_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/public-ipv4` 
          # get date and time of server
          DATE_TIME=`date`
          # set all permissions
          chmod -R 777 /var/www/html
          # create a custom index.html file
          echo "<html>
              <head>
              <title> Application Load Balancer</title>
              </head>
              <body>
                  <h1>Testing Application Load Balancer</h1>
                  <h2>Congratulations! You have created an instance from Launch Template</h2>
                  <h3>This web server is launched from the launch template by Ömer Can via CFN</h3>
                  <p>This instance is created at <b>$DATE_TIME</b></p>
                  <p>Private IP address of this instance is <b>$PRIVATE_IP</b></p>
                  <p>Public IP address of this instance is <b>$PUBLIC_IP</b></p>
              </body>
              </html>" > /var/www/html/index.html
              # start apache server
              systemctl start httpd
              systemctl enable httpd 
      LaunchTemplateName: OmerCanLT

  MyTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      IpAddressType: ipv4
      Name: MyTG
      Port: 80
      Protocol: HTTP
      TargetType: instance
      UnhealthyThresholdCount: 2
      VpcId: !Ref MyVPC

  MySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This security group enables http and ssh # Required
      GroupName: ssh and http
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: MySecGrp
      VpcId: !Ref MyVPC

Outputs:

  MyOutput:
    Description: This gives the DNS of the ELB
    Value: !Join
      - ''
      - - 'http://'
        - !GetAtt MyLoadBalancer.DNSName
